<resources>
    <string name="app_name">Github User App</string>
    <string name="github_username">Username</string>
    <string name="github_name">Name</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="github_company">Company</string>
    <string name="github_location">Location</string>
    <string name="repo">Repository :</string>
    <string name="github_user_app">Github User App</string>
    <string name="poto_profil">pp</string>
    <string name="search_user">Search User</string>
    <string-array name="github_name">
        <item>Alfin Muhammad Nurdin</item>
        <item>Dennis Ritchie</item>
        <item>Mark Zuckerberg</item>
        <item>Steve Jobs</item>
        <item>Bill Gates</item>
        <item>Linus Torvalds</item>
        <item>Jeff Bezos</item>
        <item>Elon Musk</item>
        <item>Warrent Buffet</item>
        <item>Maman Racing</item>
    </string-array>
    <string-array name="github_username">
        <item>apinchocs</item>
        <item>ennisrithie</item>
        <item>markzuck</item>
        <item>sjobs</item>
        <item>bgcool</item>
        <item>ltorv</item>
        <item>jeffbee</item>
        <item>tothemoon</item>
        <item>richwb</item>
        <item>boss201m</item>
    </string-array>
    <integer-array name="github_avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>

    <string-array name="github_company">
        <item>Dicoding</item>
        <item>C</item>
        <item>Facebook</item>
        <item>Apple</item>
        <item>Microsoft</item>
        <item>Linux</item>
        <item>Amazon</item>
        <item>Tesla</item>
        <item>Buffett Foundation</item>
        <item>Bengkel Racing Ngabrett</item>
    </string-array>
    <string-array name="github_follower">
        <item>1M</item>
        <item>100K</item>
        <item>50M</item>
        <item>35M</item>
        <item>45M</item>
        <item>666</item>
        <item>808K</item>
        <item>87M</item>
        <item>349K</item>
        <item>100M</item>
    </string-array>
    <string-array name="github_following">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>10</item>
    </string-array>
    <string-array name="github_location">
        <item>Bandung,Jawabarat</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Silicon Valley,San Francisco</item>
        <item>Subang,Jawabarat</item>
    </string-array>
    <string-array name="github_repo">
        <item>apinchocs/memulai pemerograman dengan kotlin</item>
        <item>ennisrithie/memulai pemerograman dengan C</item>
        <item>markzuck/how to hack facebook</item>
        <item>sjobs/how to hack apple</item>
        <item>bgcool//how to hack microsoft</item>
        <item>ltorv/how to hack linux</item>
        <item>jeffbee/how to hack amazon</item>
        <item>tothemoon/how dogecoin to the moon</item>
        <item>richwb/how to rich </item>
        <item>boss201m/balap lurd</item>
    </string-array>
    <string-array name="github_phone">
        <item>+628625253434</item>
        <item>+628633423232</item>
        <item>+625555555555</item>
        <item>+626666666666</item>
        <item>+627777777777</item>
        <item>+628888888888</item>
        <item>+629999999999</item>
        <item>+6210101010010</item>
        <item>+6211111111111</item>
        <item>14045</item>
    </string-array>
</resources>