<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ProfilActivity"
    android:background="@color/cyan">
    <LinearLayout
        android:id="@+id/wadah"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:foreground="@drawable/bg_profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profil_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="40dp"
        android:contentDescription="@string/poto_profil"
        app:layout_constraintBottom_toBottomOf="@+id/wadah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wadah"
        tools:src="@android:color/white" />
    <TextView
        android:id="@+id/usernameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="16sp"
        android:text="@string/github_name"
        app:layout_constraintEnd_toEndOf="@+id/profil_user"
        app:layout_constraintStart_toStartOf="@+id/profil_user"
        app:layout_constraintTop_toBottomOf="@+id/profil_user" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profil_user"
        app:layout_constraintTop_toBottomOf="@+id/wadah">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/person" />
            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/github_name"
                android:textColor="@color/navy"
                android:textSize="11dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/briefcase" />
            <TextView
                android:id="@+id/companyTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/github_company"
                android:textColor="@color/navy"
                android:textSize="11sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/loc" />
            <TextView
                android:id="@+id/locationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/github_location"
                android:textColor="@color/navy"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="10dp">
        <LinearLayout
            android:background="@drawable/bg_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/navy"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/followingTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/navy"
                    android:textSize="14sp" />
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/navy" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/follower"
                    android:textAlignment="center"
                    android:textColor="@color/navy"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/followerTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/follower"
                    android:textColor="@color/navy"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo"
        android:textColor="@color/navy"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv" />
    <TextView
        android:id="@+id/repoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/repo"
        android:textColor="@color/navy"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>